--- a/components/header/header.module.scss
+++ b/components/header/header.module.scss
@@ -1,7 +1,7 @@
 .container {
-    display: grid;
-    grid-template-columns: 1fr 2fr 1fr;
-    grid-template-rows: 1fr;
-    grid-column-gap: 0px;
-    grid-row-gap: 0px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    //border: 1px solid red;
+    height: 100px;
 }
