--- a/components/header/logo/logo.module.scss
+++ b/components/header/logo/logo.module.scss
@@ -2,22 +2,11 @@
 
 .logo {
   p {
-    margin: 0;
-    padding: 0;
-    display: inline-block;
-    vertical-align: middle;
-  }
-
-  p:first-child {
-    width: 75px;
-    height: 75px;
-  }
-
-  p:last-child {
     font-family: $primary-font;
-    font-size: 20px;
-    color: #353940;
+    font-size: 25px;
+    font-weight: bold;
+    color: $white;
     text-transform: uppercase;
-    margin-left: 20px;
+    display: inline-block;
   }
 }
