--- a/components/ui/button/button.module.scss
+++ b/components/ui/button/button.module.scss
@@ -17,7 +17,7 @@
 }
 
 .button:hover {
-  background-color: $black;
+  background-color: transparent;
   color: $primary-color;
   transition: $transition;
 }
