--- a/components/home/slide.module.scss
+++ b/components/home/slide.module.scss
@@ -1,29 +1,25 @@
-.homePage {
-  margin-top: 40px;
-  width: 100%;
+
+.slider {
   height: 600px;
+  display: flex;
+  align-items: center;
   background-image: url("/images/home-play.png");
-  background-repeat: no-repeat;
-  background-size: 100%;
-}
+  background-size: cover;
+  border-radius: 50px;
+  margin: 50px 0;
+  section {
+    width: 60%;
+    padding: 0 50px;
 
-.homePage > div {
-  padding-top: 100px;
-  margin-left: 50px;
-}
+    h1 {
+      margin: 0;
+      line-height: 70px;
+      font-size: 70px;
+      font-weight: 800;
+    }
 
-.homePage p, .homePage span {
-  font-family: "Montserrat";
-  color: white;
-  width: 880px;
-}
-
-.homePage p {
-  font-weight: bold;
-  font-size: 70px;
-  margin: 0;
-}
-
-.homePage span {
-  display: block;
+    p {
+      font-size: 23px;
+    }
+  }
 }
