--- a/components/home/slide.module.scss
+++ b/components/home/slide.module.scss
@@ -1,3 +1,4 @@
+@import '/styles/base';
 
 .slider {
   height: 600px;
@@ -7,9 +8,22 @@
   background-size: cover;
   border-radius: 50px;
   margin: 50px 0;
-  section {
+  position: relative;
+  overflow: clip;
+
+  .filter {
+    height: 1200px;
+    background-color: $black;
+    opacity: 0.7;
+    width: 1000px;
+    rotate: 106deg;
+    position: absolute;
+  }
+
+  .content {
     width: 60%;
     padding: 0 50px;
+    z-index: 2;
 
     h1 {
       margin: 0;
@@ -22,4 +36,5 @@
       font-size: 23px;
     }
   }
+
 }
