--- a/components/home/upcoming.module.scss
+++ b/components/home/upcoming.module.scss
@@ -1,21 +1,20 @@
+@import "/styles/base";
+
 .upcoming {
+  margin: 50px;
+  font-family: $primary-font;
 
-}
+  h2 {
+    color: $primary-color;
+    font-size: 36px;
+    font-weight: 700;
+    text-transform: uppercase;
+    margin-bottom: 40px;
+  }
 
-.upcoming h2 {
-  color: #FFA73C;
-  margin: 0;
-  padding-bottom: 20px;
-  width: 80%;
-  margin: auto;
-}
-
-.upcoming > div {
-  width: 80%;
-  margin: auto;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(2, 1fr);
-  grid-column-gap: 30px;
-  grid-row-gap: 30px;
+  .tournamentCardContainer {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 50px 150px
+  }
 }
