--- a/styles/base.scss
+++ b/styles/base.scss
@@ -1,5 +1,6 @@
 $primary-font: 'Montserrat';
 $primary-color: #FFA73C;
+$secondary-color : #D6FF00;
 $black: #000;
 $white: #fff;
 $transition : 0.3s
