--- a/styles/base.scss
+++ b/styles/base.scss
@@ -1,6 +1,7 @@
 $primary-font: 'Montserrat';
 $primary-color: #FFA73C;
 $secondary-color : #D6FF00;
-$black: #000;
+$black: #000000;
+$light-gray : #373737;
 $white: #fff;
 $transition : 0.3s
