--- a/components/ui/button/button.module.scss
+++ b/components/ui/button/button.module.scss
@@ -26,7 +26,7 @@
 .buttonOutline {
   padding: 10px 0;
   background-color: transparent;
-  border-radius: 10px;
+  border-radius: 5px;
   text-align: center;
   width: 250px;
   cursor: pointer;
@@ -43,4 +43,18 @@
   background-color: $primary-color;
   color: $black;
   transition: $transition;
+}
+
+.viewMore  {
+  color: $secondary-color;
+  padding: 10px;
+  gap: 5px;
+  margin: 20px 0;
+  text-transform: uppercase;
+  font-size: 10px;
+  display: inline-block;
+}
+
+.viewMore:hover {
+  color: white;
 }
