--- a/styles/base.scss
+++ b/styles/base.scss
@@ -3,5 +3,9 @@ $primary-color: #FFA73C;
 $secondary-color : #D6FF00;
 $black: #000000;
 $light-gray : #373737;
+$gray : #232529;
+$darker-gray : #1A1D1F;
+
+
 $white: #fff;
 $transition : 0.3s
