--- a/components/footer/footer.module.scss
+++ b/components/footer/footer.module.scss
@@ -1,5 +1,34 @@
+@import "styles/base";
+
 .footer {
-  height: 200px;
-  background-color: #0F1214;
-  margin-top: 30px;
+  height: 150px;
+  display: flex;
+  align-items: center;
+  padding: 0 40px;
+
+  .logo img {
+    width: 200px;
+  }
+
+  ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+
+    li {
+      display: inline-block;
+      margin: 5px;
+      padding: 10px;
+      text-transform: uppercase;
+      font-size: 15px;
+      font-weight: 500;
+      transition: $transition;
+
+      &:hover {
+        color: $primary-color;
+        transition: $transition;
+      }
+    }
+  }
+
 }
