--- a/components/header/header.module.scss
+++ b/components/header/header.module.scss
@@ -4,3 +4,10 @@
     align-items: center;
     height: 140px;
 }
+
+@media screen and (min-width: 320px) {
+    .container{
+        height: 100px;
+        border: 1px solid red;
+    }
+}
