responsive home page

--- a/components/header/navigation/navigation.module.scss
+++ b/components/header/navigation/navigation.module.scss
@@ -1,10 +1,17 @@
 @import '../../../styles/base';
 
 .navigation {
+  .closeNavigation {
+    text-align: right;
+    padding: 20px;
+    display: none;
+  }
+
   ul {
     text-align: right;
     list-style-type: none;
     margin: 0;
+    padding: 0;
 
     li {
       color: white;
@@ -34,3 +41,41 @@
   }
 }
 
+
+@media screen and (max-width: 1280px) {
+  .navigation {
+    ul {
+      li {
+        margin: 0 10px;
+        padding: 12px 5px;
+        font-size: 16px;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .navigation {
+    height: 100vh;
+    border: 1px solid green;
+    width: 100%;
+    top: 0;
+    left: 0;
+    position: absolute;
+    background-color: $black;
+    z-index: 4;
+    display: none;
+
+    .closeNavigation {
+      display: block;
+    }
+
+    ul {
+      text-align: center;
+
+      li {
+        display: block;
+      }
+    }
+  }
+}
