--- a/components/footer/copyrights.module.scss
+++ b/components/footer/copyrights.module.scss
@@ -6,5 +6,24 @@
   font-weight: 700;
   padding: 0 85px;
   display: flex;
+  font-family: $primary-font;
   justify-content: space-between;
+}
+
+@media screen and (max-width: 1280px) {
+  .copyRights {
+   padding: 0 40px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .copyRights {
+   padding: 0 25px;
+  }
+}
+
+@media screen and (max-width: 640px) {
+  .copyRights {
+   padding: 0 25px;
+    font-size: 11px;
+  }
 }
