--- a/components/footer/footer.module.scss
+++ b/components/footer/footer.module.scss
@@ -4,7 +4,8 @@
   height: 150px;
   display: flex;
   align-items: center;
-  padding: 0 40px;
+  margin: 0 40px;
+  font-family: $primary-font;
 
   .logo img {
     width: 200px;
@@ -32,3 +33,50 @@
   }
 
 }
+
+@media screen and (max-width: 1280px) {
+  .footer {
+    height: 60px;
+    margin: 20px;
+    .logo img {
+      width: 190px;
+    }
+    ul {
+      li {
+        margin: 3px;
+        padding: 5px;
+        text-transform: uppercase;
+        font-size: 14px;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .footer {
+    height: 50px;
+    margin: 20px;
+    .logo img {
+      width: 150px;
+    }
+    ul {
+      li {
+        margin: 3px;
+        padding: 5px;
+        font-size: 10px;
+      }
+    }
+  }
+}
+
+
+@media screen and (max-width: 640px) {
+  .footer {
+    ul {
+      li {
+        margin: 0;
+      }
+    }
+  }
+}
+
