--- a/components/header/header.module.scss
+++ b/components/header/header.module.scss
@@ -1,13 +1,33 @@
+@import "/styles/base";
+
 .container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 140px;
+
+  .actions {
     display: flex;
-    justify-content: space-between;
     align-items: center;
-    height: 140px;
+
+
+  }
+
 }
 
-@media screen and (min-width: 320px) {
-    .container{
-        height: 100px;
-        border: 1px solid red;
-    }
+@media screen and (max-width: 1280px) {
+  .container {
+    height: 100px;
+    margin: 0 10px;
+  }
 }
+
+@media screen and (max-width: 768px) {
+  .container {
+    height: 80px;
+    margin: 0 5px;
+  }
+}
+
+
+
