--- a/components/home/upcoming.module.scss
+++ b/components/home/upcoming.module.scss
@@ -22,3 +22,64 @@
     text-align: right;
   }
 }
+
+@media screen and (max-width: 1280px) {
+  .upcoming {
+    margin: 10px;
+
+    h2 {
+      font-size: 40px;
+      margin-bottom: 25px;
+    }
+
+    .tournamentCardContainer {
+      display: grid;
+      gap: 30px;
+      grid-template-columns: 1fr 1fr;
+    }
+  }
+}
+
+@media screen and (max-width: 1080px) {
+  .upcoming {
+    .tournamentCardContainer {
+      grid-template-columns: 1fr;
+    }
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .upcoming {
+    margin: 20px;
+
+    h2 {
+      font-size: 25px;
+      margin-bottom: 10px;
+    }
+
+    .tournamentCardContainer {
+      display: grid;
+      grid-template-columns: 1fr;
+      gap: 20px
+    }
+
+  }
+}
+
+@media screen and (max-width: 640px) {
+  .upcoming {
+    margin: 10px;
+
+    h2 {
+      font-size: 20px;
+      margin-bottom: 15px;
+    }
+
+    .tournamentCardContainer {
+      display: grid;
+      grid-template-columns: 1fr;
+      gap: 10px
+    }
+
+  }
+}
