--- a/components/ui/button/button.module.scss
+++ b/components/ui/button/button.module.scss
@@ -1,15 +1,15 @@
 @import '../../../styles/base';
 
 .button {
-  padding: 14px 0;
   background-color: $primary-color;
-  border-radius: 10px;
   text-align: center;
-  width: 250px;
   cursor: pointer;
   border: 2px solid $primary-color;
   font-family: $primary-font;
   color: black;
+  height: 50px;
+  border-radius: 10px;
+  width: 250px;
   font-weight: 700;
   font-size: 16px;
   text-transform: uppercase;
@@ -24,17 +24,17 @@
 
 
 .buttonOutline {
-  padding: 10px 0;
   background-color: transparent;
   border-radius: 5px;
   text-align: center;
+  padding: 10px 0;
   width: 250px;
+  font-size: 16px;
+  font-weight: 700;
   cursor: pointer;
   border: 2px solid $primary-color;
   font-family: $primary-font;
   color: white;
-  font-weight: 700;
-  font-size: 16px;
   text-transform: uppercase;
   transition: $transition;
 }
@@ -45,9 +45,9 @@
   transition: $transition;
 }
 
-.viewMore  {
+.viewMore {
   color: $secondary-color;
-  padding: 10px;
+  height: 25px;
   gap: 5px;
   margin: 20px 0;
   text-transform: uppercase;
@@ -57,4 +57,64 @@
 
 .viewMore:hover {
   color: white;
+}
+
+.menuIcon {
+  background-color: $primary-color;
+  border-radius: 10px;
+  margin: 0 10px;
+  display: none;
+  height: 50px;
+  width: 50px;
+  text-align: center;
+
+  img {
+    height: 50px;
+    width: 25px;
+  }
+}
+
+
+@media screen and (max-width: 1280px) {
+  .buttonOutline {
+    width: 150px;
+    font-size: 14px;
+    font-weight: 700;
+  }
+  .viewMore {
+    height: 10px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .menuIcon {
+    display: block;
+  }
+}
+
+@media screen and (max-width: 640px) {
+  .button {
+    height: 35px;
+    width: 150px;
+    font-size: 12px;
+    border-radius: 5px;
+  }
+  .menuIcon {
+    display: block;
+    height: 35px;
+    width: 35px;
+    border-radius: 5px;
+    img {
+      height: 35px;
+      width: 20px;
+    }
+  }
+
+  .buttonOutline {
+    width: 120px;
+    font-size: 12px;
+    padding: 8px 0;
+    font-weight: 700;
+  }
+
 }
