--- a/components/ui/button/button.module.scss
+++ b/components/ui/button/button.module.scss
@@ -90,6 +90,22 @@
   .menuIcon {
     display: block;
   }
+  .button {
+    height: 35px;
+    width: 150px;
+    font-size: 12px;
+    border-radius: 5px;
+  }
+  .menuIcon {
+    display: block;
+    height: 35px;
+    width: 35px;
+    border-radius: 5px;
+    img {
+      height: 35px;
+      width: 20px;
+    }
+  }
 }
 
 @media screen and (max-width: 640px) {
