Join and Purpose

--- a/components/landingPage/novel.module.scss
+++ b/components/landingPage/novel.module.scss
@@ -2,7 +2,7 @@
 
 .container {
   margin: 20px 0;
-  background-image: url("/images/novel.jpg");
+  background-image: url("/images/novel-banner.jpg");
   background-size: cover;
   height: 300px;
   display: flex;
@@ -10,6 +10,7 @@
   align-items: center;
   justify-content: end;
   padding: 0 100px;
+  font-family: $primary-font;
 }
 
 @media screen and (max-width: 640px) {
