--- a/components/landingPage/journey.module.scss
+++ b/components/landingPage/journey.module.scss
@@ -1,9 +1,9 @@
 @import "styles/base";
 
 .container {
-  margin: 20px;
+  margin: $container-margin;
+  margin-top: 100px !important;
   font-family: $primary-font;
-
   .heading {
     text-align: center;
 
