--- a/components/home/slide.module.scss
+++ b/components/home/slide.module.scss
@@ -1,16 +1,15 @@
 @import '/styles/base';
 
-.slider {
+.container {
   height: 600px;
   display: flex;
   align-items: center;
   background-image: url("/images/home-play.png");
   background-size: cover;
   border-radius: 50px;
-  margin: 50px 0;
+  margin: $container-margin;
   position: relative;
   overflow: clip;
-  width: 100%;
 
 
   .filter {
@@ -43,7 +42,7 @@
 
 
 @media screen and (max-width: 1280px) {
-  .slider {
+  .container {
     height: 400px;
     margin: 10px;
     width: auto;
@@ -72,7 +71,7 @@
 }
 
 @media screen and (max-width: 768px) {
-  .slider {
+  .container {
     height: 300px;
     margin: 5px 20px;
 
@@ -97,7 +96,7 @@
 }
 
 @media screen and (max-width: 640px) {
-  .slider {
+  .container {
     height: 250px;
     margin: 5px 10px;
 
