--- a/components/landingPage/experiences.module.scss
+++ b/components/landingPage/experiences.module.scss
@@ -2,4 +2,159 @@
 
 .container {
   margin: $container-margin;
+  font-family: $primary-font;
+
+  .heading {
+    margin: 50px 0;
+
+    h1 {
+      font-size: 50px;
+      margin: 0;
+    }
+
+    p {
+      font-weight: 100;
+    }
+  }
+
+  .tabs {
+    .header {
+      display: grid;
+      grid-template-columns: repeat(5, 1fr);
+      justify-items: center;
+      padding-bottom: 20px;
+
+      .item {
+        text-align: center;
+        cursor: pointer;
+        border-bottom: 5px solid $gray;
+        padding-bottom: 20px;
+        width: 100%;
+
+        &:hover, .active {
+          border-bottom: 5px solid $primary-color;
+        }
+
+        h3 {
+          font-size: 24px;
+          font-weight: 800;
+          margin: 0;
+        }
+
+        svg {
+          width: 55px;
+          height: 55px;
+          margin-bottom: 10px;
+        }
+
+      }
+    }
+
+    .content {
+      .infrastructure {
+        background-image: linear-gradient(to left, rgba(0, 0, 0, 0), rgb(0, 0, 0)), url("/images/infrastructure.png");
+        background-size: cover;
+        padding: 50px;
+
+        .heading {
+          padding: 50px;
+
+          h1 {
+            font-size: 30px;
+            margin: 0;
+          }
+        }
+
+        .body {
+          padding: 50px;
+          display: grid;
+          justify-items: center;
+          grid-template-columns: repeat(5, 1fr);
+
+          .icon {
+            text-align: center;
+
+            h3 {
+              text-transform: uppercase;
+            }
+          }
+
+          .icon:nth-of-type(1) {
+            grid-column-start: 1;
+            grid-column-end: 3;
+          }
+
+          .icon:nth-of-type(2) {
+            grid-column-start: 3;
+            grid-column-end: 6;
+          }
+
+          .icon:nth-of-type(3) {
+            grid-column-start: 1;
+            grid-column-end: 6;
+          }
+
+
+          .icon:nth-of-type(4) {
+            grid-column-start: 1;
+            grid-column-end: 3;
+          }
+
+          .icon:nth-of-type(5) {
+            grid-column-start: 3;
+            grid-column-end: 6;
+          }
+        }
+      }
+
+      .challenges, .skills ,  .visibility, .earnings{
+        background-image: linear-gradient(to left, rgba(0, 0, 0, 0), rgb(0, 0, 0)), url("/images/challenges.png");
+        background-size: cover;
+        padding: 50px;
+
+        .heading {
+          padding: 50px;
+
+          h1 {
+            font-size: 30px;
+            margin: 0;
+            text-transform: uppercase;
+          }
+          h3 {
+            font-size: 26px;
+          }
+        }
+
+        .body {
+          padding: 50px;
+          display: grid;
+          justify-items: center;
+          grid-template-columns: repeat(3, 1fr);
+
+          .icon {
+            text-align: center;
+            svg {
+              width: 100px;
+              height: 80px;
+            }
+            h3 {
+              text-transform: uppercase;
+            }
+          }
+        }
+      }
+
+      .skills {
+        background-image: linear-gradient(to left, rgba(0, 0, 0, 0), rgb(0, 0, 0)), url("/images/skills.png");
+      }
+
+      .visibility {
+        background-image: linear-gradient(to left, rgba(0, 0, 0, 0), rgb(0, 0, 0)), url("/images/visibility.png");
+      }
+
+      .earnings {
+        background-image: linear-gradient(to left, rgba(0, 0, 0, 0), rgb(0, 0, 0)), url("/images/earnings.png");
+      }
+    }
+  }
 }
