Fix margins and width

--- a/components/header/header.module.scss
+++ b/components/header/header.module.scss
@@ -6,6 +6,7 @@
   align-items: center;
   height: 140px;
   margin: $container-margin;
+  width: $container-width;
 
   .actions {
     display: flex;
