--- a/components/home/slide.module.scss
+++ b/components/home/slide.module.scss
@@ -8,6 +8,7 @@
   background-size: cover;
   border-radius: 50px;
   margin: $container-margin;
+  width: $container-width;
   position: relative;
   overflow: clip;
 
