--- a/styles/base.scss
+++ b/styles/base.scss
@@ -14,5 +14,6 @@ $container-margin: 30px auto;
 $container-width: 90vw;
 
 $heading-margin: 50px;
-$medium-heading: 36px;
 $large-heading: 56px;
+$small-heading: 26px;
+$medium-heading: 36px;
