--- a/components/footer/footer.module.scss
+++ b/components/footer/footer.module.scss
@@ -1,10 +1,11 @@
 @import "styles/base";
 
-.footer {
+.container {
   height: 150px;
   display: flex;
   align-items: center;
-  margin: 0 40px;
+  margin: $container-margin;
+  width: $container-width;
   font-family: $primary-font;
 
   .logo img {
@@ -35,7 +36,7 @@
 }
 
 @media screen and (max-width: 1280px) {
-  .footer {
+  .container {
     height: 60px;
     margin: 20px;
     .logo img {
@@ -53,7 +54,7 @@
 }
 
 @media screen and (max-width: 768px) {
-  .footer {
+  .container {
     height: 50px;
     margin: 20px;
     .logo img {
@@ -71,7 +72,7 @@
 
 
 @media screen and (max-width: 640px) {
-  .footer {
+  .container {
     ul {
       li {
         margin: 0;
