--- a/components/home/faq.module.scss
+++ b/components/home/faq.module.scss
@@ -1,15 +1,14 @@
 @import "/styles/base";
 
-.faqsContainer {
-  margin: 50px;
+.container {
+  margin: $container-margin;
+  width: $container-width;
   font-family: $primary-font;
 
-  h2 {
-    color: $primary-color;
-    font-size: 36px;
-    font-weight: 700;
+  h1 {
+    font-size: $medium-heading;
     text-transform: uppercase;
-    margin-bottom: 20px;
+    margin: 50px 0;
   }
 
   .faqsListItems {
@@ -57,13 +56,13 @@
 
 
 @media screen and (max-width: 1280px) {
-  .faqsContainer {
+  .container {
     margin: 20px;
   }
 }
 
 @media screen and (max-width: 768px) {
-  .faqsContainer {
+  .container {
     margin: 20px;
 
     h2 {
