--- a/components/home/leaderboard.module.scss
+++ b/components/home/leaderboard.module.scss
@@ -1,15 +1,14 @@
 @import "/styles/base";
 
-.leaderboard {
-  margin: 50px;
+.container {
+  margin: $container-margin;
+  width: $container-width;
   font-family: $primary-font;
 
-  h2 {
-    color: $primary-color;
-    font-size: 36px;
-    font-weight: 700;
+  h1 {
+    font-size: $medium-heading;
     text-transform: uppercase;
-    margin-bottom: 40px;
+    margin: 50px 0;
   }
 
   .leaderboardTabsContainer {
@@ -50,13 +49,13 @@
 }
 
 @media screen and (max-width: 1280px) {
-  .leaderboard {
+  .container {
     margin: 20px;
   }
 }
 
 @media screen and (max-width: 768px) {
-  .leaderboard {
+  .container {
     margin: 20px;
 
     h2 {
