--- a/components/home/upcoming.module.scss
+++ b/components/home/upcoming.module.scss
@@ -1,15 +1,14 @@
 @import "/styles/base";
 
-.upcoming {
-  margin: 50px;
+.container {
+  margin: $container-margin;
+  width: $container-width;
   font-family: $primary-font;
 
-  h2 {
-    color: $primary-color;
-    font-size: 36px;
-    font-weight: 700;
+  h1 {
+    font-size: $medium-heading;
     text-transform: uppercase;
-    margin-bottom: 40px;
+    margin: 50px 0;
   }
 
   .tournamentCardContainer {
@@ -24,7 +23,7 @@
 }
 
 @media screen and (max-width: 1280px) {
-  .upcoming {
+  .container {
     margin: 10px;
 
     h2 {
@@ -41,7 +40,7 @@
 }
 
 @media screen and (max-width: 1080px) {
-  .upcoming {
+  .container {
     .tournamentCardContainer {
       grid-template-columns: 1fr;
     }
@@ -49,7 +48,7 @@
 }
 
 @media screen and (max-width: 768px) {
-  .upcoming {
+  .container {
     margin: 20px;
 
     h2 {
@@ -67,7 +66,7 @@
 }
 
 @media screen and (max-width: 640px) {
-  .upcoming {
+  .container {
     margin: 10px;
 
     h2 {
