--- a/components/landingPage/journey.module.scss
+++ b/components/landingPage/journey.module.scss
@@ -1,34 +1,33 @@
 @import "styles/base";
 
 .container {
-  margin: $container-margin;
-  margin-top: 100px !important;
+  margin: 100px auto;
+  width: $container-width;
   font-family: $primary-font;
+
   .heading {
     text-align: center;
+    h1 {
+      font-size: $medium-heading ;
+      text-transform: uppercase;
+      margin: 0;
+    }
 
     h3 {
       font-weight: 500;
       margin: 5px 0;
-    }
-
-    h1 {
-      text-transform: uppercase;
-      font-weight: 800;
-      font-size: 28px;
-      margin: 0;
+      font-size: $small-heading;
     }
   }
 
   .banner {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-around;
 
     .content {
       h1 {
-        font-size: 46px;
-        font-weight: 800;
+        font-size: $large-heading;
         margin: 0;
       }
     }
