--- a/styles/base.scss
+++ b/styles/base.scss
@@ -17,3 +17,7 @@ $heading-margin: 50px;
 $large-heading: 56px;
 $small-heading: 26px;
 $medium-heading: 36px;
+
+$large-paragraph: 20px;
+$medium-paragraph: 17px;
+$small-paragraph: 14px;
