--- a/components/header/header.module.scss
+++ b/components/header/header.module.scss
@@ -18,14 +18,13 @@
 @media screen and (max-width: 1280px) {
   .container {
     height: 100px;
-    margin: 0 10px;
   }
 }
 
 @media screen and (max-width: 768px) {
   .container {
     height: 80px;
-    margin: 0 5px;
+    margin: 0 auto;
   }
 }
 
