--- a/components/home/faq.module.scss
+++ b/components/home/faq.module.scss
@@ -57,16 +57,18 @@
 
 @media screen and (max-width: 1280px) {
   .container {
-    margin: 20px;
+    margin: $container-margin;
+    width: $container-width;
   }
 }
 
 @media screen and (max-width: 768px) {
   .container {
-    margin: 20px;
-
-    h2 {
-      font-size: 25px;
+    margin: $container-margin;
+    width: $container-width;
+    h1 {
+      font-size: $small-heading;
+      margin-bottom: 15px;
     }
 
     .faqsListItems {
