--- a/components/home/upcoming.module.scss
+++ b/components/home/upcoming.module.scss
@@ -14,7 +14,7 @@
   .tournamentCardContainer {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    gap: 50px 150px
+    gap: 50px
   }
 
   .viewMoreLink {
@@ -24,7 +24,6 @@
 
 @media screen and (max-width: 1280px) {
   .container {
-    margin: 10px;
 
     h2 {
       font-size: 40px;
@@ -49,7 +48,8 @@
 
 @media screen and (max-width: 768px) {
   .container {
-    margin: 20px;
+    margin: $container-margin;
+
 
     h2 {
       font-size: 25px;
@@ -67,10 +67,9 @@
 
 @media screen and (max-width: 640px) {
   .container {
-    margin: 10px;
 
-    h2 {
-      font-size: 20px;
+    h1 {
+      font-size: $small-heading;
       margin-bottom: 15px;
     }
 
