--- a/components/landingPage/experiences.module.scss
+++ b/components/landingPage/experiences.module.scss
@@ -179,3 +179,127 @@
     }
   }
 }
+
+@media screen and (max-width: 768px) {
+  .container {
+
+    .tabs {
+      .header {
+        .item {
+          h3 {
+            font-size: $medium-paragraph;
+          }
+
+          svg {
+            width: 50px;
+            height: 50px;
+          }
+        }
+      }
+
+      .content {
+        .infrastructure, .challenges, .skills, .visibility, .earnings {
+          padding: 50px;
+
+          .heading {
+            margin-bottom: 50px !important;
+
+            h1 {
+              font-size: $small-heading;
+            }
+          }
+
+          .body {
+            .icon {
+              padding: 10px 0;
+
+              svg {
+                width: 70px;
+                height: 80px;
+              }
+
+              h3 {
+                font-size: $small-paragraph;
+              }
+
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+
+@media screen and (max-width: 640px) {
+  .container {
+    height: 600px;
+
+    .heading {
+      h1 {
+        font-size: $medium-heading;
+      }
+    }
+
+    .tabs {
+      .header {
+        .item {
+          h3 {
+            font-size: 12px;
+          }
+
+          svg {
+            width: 30px;
+            height: 30px;
+          }
+        }
+      }
+
+      .content {
+        .challenges, .skills, .visibility, .earnings {
+          .heading {
+            p {
+              font-size: 12px;
+            }
+          }
+        }
+
+        .infrastructure, .challenges, .skills, .visibility, .earnings {
+          padding: 20px;
+
+          .heading {
+            margin-bottom: 20px !important;
+
+            h1 {
+              font-size: $large-paragraph;
+            }
+
+            h3 {
+              font-size: $medium-paragraph;
+            }
+          }
+
+          .body {
+            padding: 5px;
+            justify-items: center;
+
+
+            .icon {
+              padding: 0;
+
+              svg {
+                width: 50px;
+                height: 40px;
+              }
+
+              h3 {
+                font-size: 10px;
+              }
+
+            }
+          }
+        }
+      }
+    }
+  }
+}
