--- a/styles/base.scss
+++ b/styles/base.scss
@@ -9,6 +9,7 @@ $darker-gray: #1A1D1F;
 
 $white: #fff;
 $transition: 0.3s;
+$gray : #DBDBDB;
 
 $container-margin: 30px auto;
 $container-width: 90vw;
