--- a/pages/login/login.module.scss
+++ b/pages/login/login.module.scss
@@ -24,7 +24,7 @@
       width: 800px;
       margin: 50px auto;
       font-size: $medium-paragraph;
-      color: $gray;
+      color: $color-gray;
     }
 
     hr {
