--- a/pages/wallet/success/wallet-success.module.scss
+++ b/pages/wallet/success/wallet-success.module.scss
@@ -1,4 +1,4 @@
-@import "styles/base";
+@import "../../../styles/base";
 
 .container {
   width: $container-width;
@@ -15,8 +15,10 @@
     }
 
     p {
-      font-size: $medium-paragraph;
+      font-size: $large-paragraph;
       line-height: 10px;
+      color: $primary-color;
+      text-transform: uppercase;
     }
   }
 
@@ -29,33 +31,31 @@
     flex-direction: column;
     gap: 10px;
 
-    h3 {
-      font-size: $small-heading;
-      color: $primary-color;
-      text-transform: uppercase;
+    p {
+      font-size: $medium-paragraph;
+      line-height: 10px;
+    }
+    ul {
+      list-style: none;
       margin: 0;
+      padding: 0;
+      li {
+        text-align: center;
+        margin-bottom: 5px;
+      }
     }
 
-
-    svg {
-      width: 100px;
-      margin-top: 50px;
+    a {
+      color: $primary-color;
     }
+
 
 
     button {
-      margin: 10px auto;
-      display: block;
-      height: 40px;
-      line-height: 35px;
+      height: 45px;
+      border-radius: 10px;
+      width: 250px;
     }
-
-    h4 {
-      font-size: $medium-paragraph;
-      text-transform: uppercase;
-      margin: 0;
-    }
-
 
 
   }
