--- a/pages/dashboard/overview/dashboard-overview.module.scss
+++ b/pages/dashboard/overview/dashboard-overview.module.scss
@@ -185,6 +185,7 @@
     }
 
     .main {
+
       .steps {
         .heading {
           h1 {
@@ -249,6 +250,127 @@
           }
 
         }
+
+      }
+
+      .heading {
+        h1 {
+          font-size: $medium-heading;
+          text-transform: uppercase;
+        }
+      }
+
+      .rewards {
+        display: flex;
+        gap: 50px;
+
+
+        .reward {
+          width: 200px;
+          position: relative;
+
+          .load {
+            p {
+              border: 2px solid $primary-color;
+              padding: 5px 10px;
+              font-weight: 600;
+              text-transform: uppercase;
+              font-size: $small-paragraph;
+              color: $primary-color;
+              margin-bottom: 0;
+            }
+          }
+
+          .default, .ready, .loading, .disabled {
+            border-radius: 10px  10px 10px 0;
+            border: 2px solid $primary-color;
+            overflow: clip;
+            text-align: center;
+
+            .informationIcon {
+              text-align: right;
+              position: absolute;
+              right: 0;
+              top: 0;
+
+              svg {
+                margin: 10px;
+              }
+            }
+
+            .image {
+              margin: 25px 25px 5px;
+            }
+
+            .text {
+              text-transform: uppercase;
+              color: $black;
+              font-weight: 700;
+              margin-bottom: 20px;
+
+              p {
+                font-size: $medium-paragraph;
+                margin: 0;
+              }
+
+              h1 {
+                font-size: $medium-heading;
+                line-height: $medium-heading;
+                margin: -5px;
+              }
+            }
+          }
+
+          .default {
+            background-image: linear-gradient($black, $primary-color);
+          }
+
+          .ready {
+            background-image: linear-gradient($black, $secondary-color);
+
+            .text {
+              h1 {
+                font-size: $small-heading;
+              }
+            }
+          }
+
+          .loading {
+            background-image: linear-gradient(rgba($primary-color, 1),  rgba($secondary-color, 0.8));
+
+            .text {
+              h1 {
+                font-size: $small-heading;
+              }
+            }
+          }
+
+          .disabled {
+            background-image: linear-gradient($black, rgba($white, 0.5));
+            border: 2px solid $light-gray;
+
+            .informationIcon {
+              svg {
+                stroke: $darker-gray;
+                path {
+                  fill: $darker-gray;;
+                }
+              }
+            }
+
+            .image img{
+              filter: grayscale(100%);
+            }
+
+            .text {
+              h1 {
+                font-size: $small-heading;
+              }
+            }
+          }
+
+        }
+
 
       }
     }
