--- a/pages/dashboard/overview/dashboard-overview.module.scss
+++ b/pages/dashboard/overview/dashboard-overview.module.scss
@@ -185,14 +185,14 @@
     }
 
     .main {
+      .heading {
+        h1 {
+          font-size: $medium-heading;
+          text-transform: uppercase;
+        }
+      }
 
       .steps {
-        .heading {
-          h1 {
-            font-size: $medium-heading;
-            text-transform: uppercase;
-          }
-        }
 
         .step {
           border-radius: 20px;
@@ -253,13 +253,6 @@
 
       }
 
-      .heading {
-        h1 {
-          font-size: $medium-heading;
-          text-transform: uppercase;
-        }
-      }
-
       .rewards {
         display: flex;
         gap: 50px;
@@ -282,7 +275,7 @@
           }
 
           .default, .ready, .loading, .disabled {
-            border-radius: 10px  10px 10px 0;
+            border-radius: 10px 10px 10px 0;
             border: 2px solid $primary-color;
             overflow: clip;
             text-align: center;
@@ -336,7 +329,7 @@
           }
 
           .loading {
-            background-image: linear-gradient(rgba($primary-color, 1),  rgba($secondary-color, 0.8));
+            background-image: linear-gradient(rgba($primary-color, 1), rgba($secondary-color, 0.8));
 
             .text {
               h1 {
@@ -352,13 +345,14 @@
             .informationIcon {
               svg {
                 stroke: $darker-gray;
+
                 path {
                   fill: $darker-gray;;
                 }
               }
             }
 
-            .image img{
+            .image img {
               filter: grayscale(100%);
             }
 
@@ -373,10 +367,105 @@
 
 
       }
+
+
+      .tabsContainer {
+        margin: 50px 0;
+
+        .tabs {
+          border-bottom: 1px solid $light-gray;
+          padding-bottom: 10px;
+
+          span {
+            margin: 8px;
+            font-size: 16px;
+            border-bottom: 1px solid $light-gray;
+            padding-bottom: 10px;
+            color: $light-gray;
+            cursor: pointer;
+            transition: $transition;
+          }
+
+          span:hover, span.active {
+            border-bottom: 1px solid $primary-color;
+            color: white;
+            font-weight: 700;
+            transition: $transition;
+          }
+        }
+
+        .tabsContent {
+          margin: 20px 0;
+          display: grid;
+          grid-template-columns: 2fr 1fr;
+          gap: 25px;
+
+          .gameStats, .contribution, .badgeWell {
+            border-radius: 10px;
+            border: 2px solid $gray;
+            background-color: $darker-gray;
+            padding: 30px;
+
+            .heading {
+              margin: 10px 0;
+
+              h2 {
+                margin: 0;
+              }
+            }
+          }
+
+
+          .gameStats {
+
+            .statsCard {
+              border-radius: 10px;
+              border: 2px solid $gray;
+              background-color: $darker-gray;
+              width: 200px;
+              padding: 10px;
+              position: relative;
+
+              .image {
+                border-radius: 10px;
+                overflow: clip;
+
+                img {
+                  filter: grayscale(100%);
+                  opacity: 0.5;
+                }
+              }
+
+
+              .stats {
+                position: absolute;
+                top : 30%;
+                left: 20%;
+                text-align: center;
+                text-transform: uppercase;
+                h1 {
+                  font-size: $large-paragraph;
+                  margin: 10px 0;
+                }
+                p {
+                  font-size: $small-paragraph;
+                  margin: 0;
+                  font-weight: 500;
+                  span {
+                    color: $primary-color;
+                  }
+                }
+              }
+
+            }
+          }
+
+
+        }
+      }
+
     }
 
-
   }
-
 
 }
