--- a/components/connected/steps.module.scss
+++ b/components/connected/steps.module.scss
@@ -8,9 +8,10 @@
   .heading {
 
     h1 {
-      font-size: $large-heading;
-      margin: 0;
+      font-size: $medium-heading;
+      text-transform: uppercase;
     }
+
   }
 
   .content {
@@ -28,14 +29,11 @@
       gap: 30px;
       cursor: pointer;
 
-      &:hover {
-        background: rgba($secondary-color, 0.2);
-      }
-
       .mainIcon {
+
         svg {
-          height: 100px;
-          width: 100px;
+          height: 80px;
+          width: 80px;
 
           path {
             fill: $primary-color;
@@ -43,8 +41,13 @@
         }
       }
 
+      &:hover {
+        background: rgba($secondary-color, 0.2);
+      }
+
 
       .details {
+        width: 100%;
 
         h4 {
           font-size: $large-paragraph;
@@ -54,9 +57,11 @@
 
         .actions {
           margin-top: 20px;
-          display: flex;
+          display: grid;
+          grid-template-columns: repeat(4, 1fr);
           gap: 20px;
           align-items: center;
+          justify-content: space-between;
 
           .ratio {
             font-weight: 600;
@@ -88,10 +93,34 @@
 }
 
 
+@media screen and (max-width: 1440px) {
+  .container {
+    .content {
+      display: grid;
+      gap: 30px;
+
+      .card {
+        border: 2px solid $darker-gray;
+        border-radius: 30px;
+        padding: 30px;
+
+        .actions {
+          gap: 10px
+        }
+      }
+    }
+  }
+}
+
 @media screen and (max-width: 1280px) {
 
 
   .container {
+    .content {
+      display: grid;
+      grid-template-columns: repeat(1, 1fr);
+      gap: 50px;
+    }
 
   }
 
@@ -109,7 +138,45 @@
 @media screen and (max-width: 640px) {
 
   .container {
+    .content {
+      display: grid;
+      gap: 10px;
 
+      .card {
+        border: 2px solid $darker-gray;
+        border-radius: 30px;
+        padding: 20px;
+
+        .details {
+          h4 {
+            font-size: $medium-paragraph;
+          }
+          p {
+            font-size: $small-paragraph;
+          }
+
+          .actions {
+            margin-top: 20px;
+            gap: 5px;
+            grid-template-columns: repeat(2, 1fr);
+          }
+        }
+
+        .mainIcon {
+
+          svg {
+            height: 50px;
+            width: 50px;
+
+            path {
+              fill: $primary-color;
+            }
+          }
+        }
+
+
+      }
+    }
   }
 
 }
