--- a/components/dashboard/profile.module.scss
+++ b/components/dashboard/profile.module.scss
@@ -1,8 +1,9 @@
 @import "styles/base";
+
 .profile {
   border: 2px solid $gray;
   border-radius: 10px;
-  padding: 20px 40px;
+  padding: 20px;
   margin-top: -100px;
   z-index: 2;
   background-color: $black;
@@ -29,7 +30,7 @@
       }
 
       p {
-        font-size: 12px;
+        font-size: $small-paragraph;
         text-transform: uppercase;
         color: $secondary-color;
         font-weight: 500;
@@ -40,7 +41,7 @@
         margin-top: 5px;
         display: inline-block;
         background: $primary-color;
-        font-size: 10px;
+        font-size: 11px;
         color: $black;
         padding: 5px 10px;
         border-radius: 5px;
@@ -66,7 +67,7 @@
   }
 
   button {
-    width: 150px;
+    width: 100%;
     height: 35px;
     font-size: $small-paragraph;
     text-transform: capitalize;
@@ -87,7 +88,7 @@
         align-items: center;
         font-weight: 600;
         margin-top: 10px;
-        font-size: 10px;
+        font-size: 12px;
       }
 
       .points span {
@@ -122,7 +123,7 @@
   .leaderboard {
     .row {
       display: flex;
-      font-size: 10px;
+      font-size: 12px;
       gap: 5px;
       text-align: center;
       align-items: center;
@@ -163,5 +164,63 @@
       }
     }
   }
+
+}
+
+
+@media screen and (max-width: 1440px) {
+
+
+  .profile {
+    margin-top: -90px;
+
+    .header {
+      .bio {
+        h3 {
+          font-size: $medium-paragraph;
+        }
+
+        p {
+          font-size: 12px;
+        }
+      }
+    }
+
+  }
+
+}
+
+
+@media screen and (max-width: 768px) {
+
+  .profile {
+    margin-top: -50px;
+    .header {
+      grid-template-columns: 2fr 6fr 1fr;
+    }
+
+    .leaderboard {
+      .row {
+        font-size: $small-paragraph;
+        gap: 10px;
+        padding: 10px 0;
+      }
+    }
+
+  }
+
+}
+
+@media screen and (max-width: 640px) {
+
+  .profile {
+    margin-top: 10px;
+    .header {
+      grid-template-columns: 2fr 4fr 1fr;
+    }
+
+
+  }
+
 
 }
