--- a/pages/dashboard/tournament/tournament.module.scss
+++ b/pages/dashboard/tournament/tournament.module.scss
@@ -8,7 +8,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     height: 500px;
-    max-width: 1920px;
+    width: 100%;
   }
 
   .content {
@@ -72,6 +72,7 @@
 
       .tabsContent {
         margin: 20px 0;
+        overflow: scroll;
 
         .overview {
           .displayGrid {
@@ -80,7 +81,6 @@
           }
 
           .details {
-            //grid-column: 1 / 6;
             display: grid;
             grid-template-columns: 1fr 1fr;
             border: 2px solid $light-gray;
@@ -93,13 +93,17 @@
             .icons {
               border-right: 3px solid $primary-color;
               display: flex;
-              gap: 50px;
               justify-content: center;
               text-align: center;
+              align-items: center;
+
+              .icon {
+                width: 25%;
+              }
 
               svg {
-                width: 50px;
-                height: 50px;
+                width: 40px;
+                height: 40px;
               }
 
               h3 {
@@ -189,12 +193,13 @@
             padding: 30px;
             background-color: $darker-gray;
             text-align: left;
+            overflow: scroll !important;
 
             thead {
               color: $primary-color;
 
               th {
-                padding: 20px 0;
+                padding: 20px;
                 border-bottom: 1px solid $primary-color;
               }
             }
@@ -202,7 +207,7 @@
 
             tbody {
               td {
-                margin: 20px 0;
+                padding: 20px;
               }
             }
 
@@ -210,6 +215,7 @@
               display: flex;
               align-items: center;
               gap: 10px;
+              width: 200px;
 
               .image {
                 display: inline-block;
@@ -229,4 +235,180 @@
 
   }
 
+}
+
+
+@media screen and (max-width: 1280px) {
+
+
+  .container {
+
+    .banner {
+      height: 300px;
+    }
+
+    .content {
+      .tabsContainer {
+        .tabsContent {
+          .overview {
+            .details {
+              padding: 15px;
+              gap: 30px;
+              align-items: center;
+
+              .icons {
+                .icon {
+                  width: 25%;
+
+                  svg {
+                    width: 35px;
+                  }
+
+                  h3 {
+                    font-size: $small-paragraph;
+                  }
+
+                  p {
+                    font-size: 11px;
+                  }
+                }
+              }
+            }
+
+            .displayGrid {
+              .join {
+                width: 300px;
+                .section {
+                  .content {
+                    span {
+                      display: inline-block;
+                    }
+                  }
+                }
+              }
+            }
+
+          }
+        }
+      }
+    }
+  }
+
+}
+
+
+@media screen and (max-width: 768px) {
+
+
+  .container {
+    .content {
+      .tabsContainer {
+        .tabsContent {
+          .overview {
+            .details {
+              padding: 10px;
+              gap: 20px;
+              p {
+                font-size: $small-paragraph;
+              }
+              .icons {
+                .icon {
+                  h3 {
+                    font-size: 10px;
+                  }
+
+                  p {
+                    font-size: 9px;
+                  }
+                }
+              }
+            }
+
+            .displayGrid {
+              grid-template-columns: 1fr;
+              gap: 20px;
+              .join {
+                width: 90vw;
+               .action {
+                 align-items: start;
+                 button {
+                   width: 200px;
+                 }
+               }
+                .section {
+                  .content {
+                    span {
+                      display: inline-block;
+                    }
+                  }
+                }
+              }
+            }
+
+          }
+        }
+      }
+    }
+  }
+
+}
+
+@media screen and (max-width: 640px) {
+
+
+  .container {
+    .banner {
+      height: 200px;
+    }
+
+    .content {
+
+      .tournament {
+        align-items: center;
+        gap: 20px;
+        .image {
+          margin-top: 0;
+          width: 100px;
+        }
+
+        .information {
+          h4 {
+            font-size: $large-paragraph;
+          }
+
+          p {
+            margin: 0;
+            font-size: $small-paragraph;
+          }
+
+          span {
+            font-size: $small-paragraph;
+          }
+        }
+      }
+
+      .tabsContainer {
+        .tabsContent {
+          .overview {
+            .details {
+              grid-template-columns: 1fr;
+              padding: 10px;
+              gap: 0;
+
+              p {
+                text-align: center;
+              }
+
+              .icons {
+                border-right: none;
+                border-bottom: 2px solid $primary-color;
+                padding-bottom: 20px;
+              }
+            }
+
+          }
+        }
+      }
+    }
+  }
 }
