--- a/components/landingPage/roadmap.module.scss
+++ b/components/landingPage/roadmap.module.scss
@@ -4,6 +4,8 @@
   width: $container-width;
   margin: $container-margin;
   font-family: $primary-font;
+  background-image: url("/images/roadmap-bg.png");
+  background-size: cover;
 
   .heading {
     h1 {
@@ -15,17 +17,15 @@
 
   .items {
     display: grid;
-    grid-template-columns: repeat(6, 1fr);
     justify-items: center;
 
     .item {
-      text-align: center;
       display: flex;
-      flex-direction: column;
       justify-content: center;
       align-items: center;
       cursor: pointer;
       position: relative;
+      gap: 50px;
 
 
       h2, h3 {
@@ -42,6 +42,8 @@
         margin: 40px 0;
         background-color: $black;
         z-index: 5;
+        text-align: center;
+
 
         svg {
           width: 50px;
@@ -84,27 +86,34 @@
 
   }
 
+  .item:nth-of-type(even) {
+    margin-left: -140px;
+  }
+
   .item:nth-of-type(odd) {
     .splitter {
       position: absolute;
-      right: -200px;
-      top: 34.5%;
+      left: 60px;
+      bottom: -20px;
+      rotate: 90deg;
 
       svg {
-        width: 290px;
+        width: 190px;
         height: 3px;
       }
     }
   }
+
 
   .item:nth-of-type(even) {
     .splitter {
       position: absolute;
-      right: -200px;
-      top: 28.5%;
+      left: 160px;
+      bottom: -20px;
+      rotate: 90deg;
 
       svg {
-        width: 290px;
+        width: 190px;
         height: 3px;
       }
     }
@@ -113,40 +122,6 @@
 }
 
 
-@media screen and (max-width: 1280px) {
-
-
-  .container {
-    .items {
-      grid-template-columns: repeat(3, 1fr);
-
-      .item:nth-of-type(3) {
-        .splitter {
-          display: none;
-        }
-      }
-    }
-
-  }
-
-}
-
-
-@media screen and (max-width: 768px) {
-  .container {
-    .items {
-      .item {
-        .splitter {
-          right: -100px;
-          svg {
-            width: 200px;
-            height: 3px;
-          }
-        }
-      }
-    }
-  }
-}
 
 @media screen and (max-width: 640px) {
 
@@ -155,15 +130,6 @@
       h1 {
         font-size: $small-heading;
         margin: 20px 0;
-      }
-    }
-    .items {
-      grid-template-columns: repeat(1, 1fr);
-
-      .item {
-        .splitter {
-         display: none;
-        }
       }
     }
   }
